--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+<head>
+  <meta charset="utf-8" />
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" <link rel="stylesheet" href="src/index.css" /> <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+  <title>Jon-Daniel Coombs Website</title>
+</head>
+
+<body>
+  <header class="header">
+    <a href="#" class="logo"> Jon.</a>
+
+    <nav class="navbar">
+      <a href="#" class="active">Home</a>
+      <a href="#">About</a>
+      <a href="#">Projects</a>
+      <a href="#">Contact</a>
+    </nav>
+  </header>
+
+  <section class="home">
+    <div class="home-content">
+      <h1>Hi, I'm Jon-Daniel Coombs</h1>
+      <h3>Frontend Developer</h3>
+      <p>Unleash the power of design! With fiery passion and unwavering drive, I strive to create hassle-free digital
+        products that solve real problems while delivering a satisfying user experience. Join me on this exhilarating
+        journey as we craft practical and captivating designs that push boundaries, leaving users in awe. Get ready to
+        embark on an unforgettable adventure where innovation meets imagination, and together, we'll shape a future
+        filled with delightful and impactful digital experiences. Welcome to a world of limitless possibilities!</p>
+
+      <div class="btn-box">
+        <a href="#">Let's Talk</a>
+        <a href="#">See My Work</a>
+      </div>
+    </div>
+
+    <div class="home-sci">
+      <a href="https://github.com/Coder-Jon014" data-social="GitHub"><i class='bx bxl-github'></i></a>
+      <a href="https://www.linkedin.com/in/jon-daniel-c-a3535b134/" data-social="LinkedIn"><i class='bx bxl-linkedin' ></i></a>
+      <a href="https://www.behance.net/jon-dancoombs" data-social="Behance"><i class='bx bxl-behance' ></i></a>
+    </div>
+  </section>
+</body>
+
 </html>
