Added some transistions and links

--- a/public/index.html
+++ b/public/index.html
@@ -12,39 +12,7 @@
 </head>
 
 <body>
-  <header class="header">
-    <a href="#" class="logo"> Jon.</a>
-
-    <nav class="navbar">
-      <a href="#" class="active">Home</a>
-      <a href="#">About</a>
-      <a href="#">Projects</a>
-      <a href="#">Contact</a>
-    </nav>
-  </header>
-
-  <section class="home">
-    <div class="home-content">
-      <h1>Hi, I'm Jon-Daniel Coombs</h1>
-      <h3>Frontend Developer</h3>
-      <p>Unleash the power of design! With fiery passion and unwavering drive, I strive to create hassle-free digital
-        products that solve real problems while delivering a satisfying user experience. Join me on this exhilarating
-        journey as we craft practical and captivating designs that push boundaries, leaving users in awe. Get ready to
-        embark on an unforgettable adventure where innovation meets imagination, and together, we'll shape a future
-        filled with delightful and impactful digital experiences. Welcome to a world of limitless possibilities!</p>
-
-      <div class="btn-box">
-        <a href="#">Let's Talk</a>
-        <a href="#">See My Work</a>
-      </div>
-    </div>
-
-    <div class="home-sci">
-      <a href="https://github.com/Coder-Jon014" data-social="GitHub"><i class='bx bxl-github'></i></a>
-      <a href="https://www.linkedin.com/in/jon-daniel-c-a3535b134/" data-social="LinkedIn"><i class='bx bxl-linkedin' ></i></a>
-      <a href="https://www.behance.net/jon-dancoombs" data-social="Behance"><i class='bx bxl-behance' ></i></a>
-    </div>
-  </section>
+  <div id="root">
+  </div>
 </body>
-
 </html>
